# embedded-takehome

./: CMakeLists.txt  README.md  main.c
include/: condsel.h  posdet.h  seqnet.h
src/: condsel.c  posdet.c  seqnet.c
test/: test_condsel.cpp  test_seqnet.cpp
test/mock/: mock_posdet.cpp  mock_posdet.hpp
